[metadata]
name = Python package
version = 1.0.0
author = Kirolos Fouad
author_email = kirolosfouad05@gmail.com
description = A Python package for AI programming course.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Kirolos05/Python-package

[options]
packages = find:
